# cubo

./: .gitignore  README.md  cubicle.opam  cubo.install  cubo.opam  dune-project  package-lock.json
cubicle-vscode/: README.md  package-lock.json  package.json  tsconfig.json
cubicle-vscode/src/: extension.ts
cubicle-vscode/syntaxes/: cubicle.tmLanguage.json
cubo-vscode/: language-configuration.json  package-lock.json  package.json
cubo-vscode/src/: extension.ts
cubo-vscode/syntaxes/: cubo.tmLanguage.json
doc/: README.md
lib/: all.cube  bool.cube  connection.cube  connection.cubo  equiv.cube  function.cube  kan.cube  nat.cube  nat.cubo  path.cube  product.cube  sum.cube  unit.cubo  universe.cube  universe.cubo
src/: .merlin  ast.ml  core_ast.ml  debruijn.ml  dune  eval.ml  hole.ml  placeholder.ml  pretty.ml  scanner.mll  substitution.ml  syntax.conflicts  syntax.mly  universe.ml
src/checker/: .merlin  check.ml  checker.ml  ctx.ml  dune  elab.ml  stack.ml  synth.ml  type.ml
src/context/: .merlin  dune  global.ml  local.ml
src/frontend/: .merlin  command.ml  context.ml  dune  environment.ml  file.ml
src/synthesis/: .merlin  attempt.ml  dune  implicit.ml  stack.ml  synthesize.ml
tests/: bugs.cube  bugs.cubo  test.cubo
tests/examples/: implicit.cubo  mwe_hcom_stolen.cube
tests/fail/: examples.cube  examples.cubo
tests/success/: all.cubo  bool.cubo  coe.cubo  com.cubo  connection.cubo  examples.cubo  function.cubo  kan.cubo  nat.cubo  path.cubo  product.cubo  sum.cubo  universe.cubo
