opam-version: "2.0"
name: "cubicle"
version: "0.1"
maintainer: "bbentzen@andrew.cmu.edu"
authors: ["bbentzen"]
homepage: "https://github.com/bbentzen/cubicle"
bug-reports: "https://github.com/bbentzen/cubicle/issues"
dev-repo: "git+https://github.com/bbentzen/cubicle.git"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
